# mlflow_example

./: .gitignore  README.md  logistic_regression_script.py  lr.ipynb  pyproject.toml  torch_example.ipynb
